# MCTS-4-SR

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark_runner.py  demo.py  pyproject.toml  requirements.txt  setup.py  vcpkg.json
.github/workflows/: ci.yml
benchmarks/: __init__.py  basic_config.json  blackbox_config.json  dataset_handler.py  run.py
benchmarks/metrics/: __init__.py  evaluation.py
configs/: basic.yaml  blackbox.yaml  constant_basic.yaml
iMCTS/: __init__.py  gp.py  mcts.py  pretty.py  regressor.py
iMCTS/benchmarks/: __main__.py  basic.yaml  blackbox.json  blackbox.yaml  cli.py  executor.py  runner.py  sources.py
iMCTS/src/: __init__.py  exp_tree.py
iMCTS/src/utils/: __init__.py  exp_queue.py  reward.py
iMCTS/src/utils/__pycache__/: reward.cal_res_numba-6.py311.1.nbc  reward.cal_res_numba-6.py311.nbi
imcts/: __init__.py  pretty.py
imcts/benchmarks/: __init__.py  basic.json  basic.yaml  blackbox.yaml  cli.py  config.py  defaults.py  executor.py  registry.py  report.py  runner.py  sources.py  writer.py
imcts/benchmarks/experiments/ablations/: model_a.yaml  model_b.yaml
imcts/benchmarks/experiments/ucb_extreme/: model_a.yaml  model_b.yaml  model_c.yaml  model_d.yaml  model_e.yaml  model_f.yaml
include/imcts/: regressor.hpp
include/imcts/core/: bridge.hpp  dataset.hpp  exp_queue.hpp  exp_tree.hpp  node.hpp  profiling.hpp  symbol.hpp  tree.hpp  types.hpp
include/imcts/eval/: interpreter.hpp  optimizer.hpp
include/imcts/evaluator/: evaluator.hpp
include/imcts/gp/: gp_manager.hpp
include/imcts/mcts/: mcts.hpp  node.hpp
python/: bindings.cpp  demo.py  run_python_smoke.py  test_benchmarks.py  test_imcts.py
scripts/: basic.sh  blackbox.sh  run_benchmark_groups.ps1  run_benchmark_groups.sh
scripts/ps/: run_ablation.ps1  run_benchmark_groups.ps1  run_ucb_extreme_sensitivity.ps1
scripts/sh/: run_ablation.sh  run_benchmark_groups.sh  run_ucb_extreme_sensitivity.sh
source/: regressor.cpp
source/core/: bridge.cpp  exp_queue.cpp  exp_tree.cpp  profiling.cpp  tree.cpp
source/eval/: interpreter.cpp  optimizer.cpp
source/evaluator/: evaluator.cpp
source/gp/: gp_manager.cpp
source/mcts/: mcts.cpp
test/: CMakeLists.txt  profile_hotspots.cpp  test_bridge.cpp  test_const_manual.cpp  test_evaluator.cpp  test_exp_queue.cpp  test_exp_tree.cpp  test_gp_manager.cpp  test_interpreter.cpp  test_mcts.cpp  test_regressor.cpp  test_symbol.cpp  test_tree_format.cpp
