[build-system]
requires = [
    "cmake>=3.20",
    "ninja",
    "scikit-build-core>=0.10",
    "pybind11>=2.10",
]
build-backend = "scikit_build_core.build"

[project]
name = "MCTS-4-SR"
version = "0.1.0"
description = "MCTS-4-SR: symbolic regression with a C++ pybind11 backend"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "sympy",
    "PyYAML",
]

[project.optional-dependencies]
examples = ["pandas", "scikit-learn"]

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.build-type = "Release"
cmake.args = ["-DIMCTS_BUILD_PYTHON=ON", "-DBUILD_TESTING=OFF"]
wheel.packages = []

[tool.scikit-build.sdist]
include = [
    "CMakeLists.txt",
    "README.md",
    "include/**",
    "source/**",
    "python/**",
    "imcts/**",
]
