find_package(Catch2 3 CONFIG REQUIRED)
include(Catch)

function(add_imcts_test name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE imcts_core Catch2::Catch2WithMain)
    catch_discover_tests(${name})
endfunction()

add_imcts_test(test_symbol)
add_imcts_test(test_exp_tree)
add_imcts_test(test_exp_queue)
add_imcts_test(test_bridge)
add_imcts_test(test_evaluator)
add_imcts_test(test_interpreter)
add_imcts_test(test_gp_manager)
add_imcts_test(test_mcts)
add_imcts_test(test_regressor)
add_imcts_test(test_tree_format)
